# cpp-opencv-visualstudio-cmake

./: README.md  build.bat
build_default/: CMakeLists.txt  main.cpp
